# clawbrowser

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  USAGE.md
src/: config.rs  lib.rs  main.rs
src/dom/: arena.rs  document.rs  mod.rs  node.rs  selector.rs  serialize.rs  tree.rs
src/engine/: page.rs
src/html/: mod.rs  parser.rs
src/http/: mod.rs
src/js/: event_loop.rs  mod.rs  runtime.rs  script_loader.rs
src/js/bindings/: console.rs  dom.rs  dom_shim.js  fetch.rs  mod.rs  timer.rs  window.rs
src/output/: cleanup.rs  markdown.rs  mod.rs
tests/: integration.rs  testing.js  web_api.rs
tests/dom/document/: create_element.html  document_fragment.html  document_properties.html  get_element_by_id.html
tests/dom/element/: attributes.html  children.html  class_list.html  closest.html  dataset.html  get_elements_by.html  inner_html.html  matches.html  outer_html.html  query_selector.html
tests/dom/node/: append_child.html  child_nodes.html  clone_node.html  contains.html  insert_before.html  node_properties.html  remove_child.html  replace_child.html  text_content.html
tests/encoding/: text_decoder.html  text_encoder.html
tests/events/: add_remove_listener.html  custom_event.html  event_constructor.html
tests/fetch/: basic_fetch.html  headers.html  request.html  response.html
tests/storage/: local_storage.html
tests/timers/: clear_timeout.html  set_interval.html  set_timeout.html
tests/url/: url_constructor.html  url_searchparams.html
tests/window/: atob_btoa.html  global_this.html  location.html  navigator.html
(+2 files in other folders)
