[package]
name = "clawbrowser"
version = "0.1.0"
edition = "2021"
description = "A lightweight headless browser CLI for web scraping with JavaScript execution. Built in Rust with QuickJS."
license = "MIT"
repository = "https://github.com/clawbrowser-io/clawbrowser"
homepage = "https://github.com/clawbrowser-io/clawbrowser"
keywords = ["headless-browser", "web-scraping", "quickjs", "markdown", "cli"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "cookies", "gzip", "brotli", "deflate", "blocking"] }
html5ever = "0.29"
markup5ever = "0.14"
selectors = "0.26"
rquickjs = { version = "0.11", features = ["futures", "macro", "classes", "properties", "rust-alloc"] }
htmd = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
url = "2"
cssparser = "0.34"

[dev-dependencies]
tiny_http = "0.12"
walkdir = "2"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
